--- a/VideoStreamingP2/app/build.gradle
+++ b/VideoStreamingP2/app/build.gradle
@@ -5,12 +5,12 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     buildToolsVersion "29.0.0"
     defaultConfig {
         applicationId "com.wesley.videostreamingp2"
         minSdkVersion 15
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -42,5 +42,5 @@ dependencies {
 }
 
 repositories {
-    mavenCentral()
+    //mavenCentral()
 }
