--- a/VideoStreamingP2/app/src/main/AndroidManifest.xml
+++ b/VideoStreamingP2/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:usesCleartextTraffic="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/Theme.MaterialComponents.DayNight">
         <service android:name=".model.VideoService"
                  android:enabled="true"
                  android:exported="false"/>
